--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-tagsinput": "^0.7.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
-    "vue-resource": "^1.3.4"
+    "vue-resource": "^1.3.4",
+    "vuejs-datepicker": "^1.5.3"
   }
 }
